# SPDX-PackageName: honestbt
# SPDX-PackageSupplier: Ryan Finnie <ryan@finnie.org>
# SPDX-PackageDownloadLocation: https://github.com/rfinnie/honestbt
# SPDX-FileComment: pyproject configs
# SPDX-FileCopyrightText: © 2025 Ryan Finnie <ryan@finnie.org>
# SPDX-License-Identifier: MPL-2.0
[project]
name = "honestbt"
authors = [
    {name = "Ryan Finnie", email = "ryan@finnie.org"},
]
description = "Destructive tester which detects dishonest block devices"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MPL-2.0"}
dependencies = [
    "pycryptodomex",
]
dynamic = ["version"]

[tool.setuptools]
script-files = ["honestbt"]

[tool.black]
line-length = 132
